--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s dist"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.17",
@@ -17,7 +18,8 @@
     "lucide-react": "^0.554.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^3.5.0"
+    "recharts": "^3.5.0",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
